add templates for quiz questions. A refence page with listed objectives

--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href=css/"bootstrap.css" rel="stylesheet" type=text.css>
-    <link href="css/styles.css" rel="stylesheet" type=text.css>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="jquerry-3.3.1.js"></script>
     <script src="scripts.js"></script>
     <title>Language Track Suggester</title>
   </head>
   <body>
     <div class="container">
-      
+      <h1> Ruby/Rails, CSS/React C#/.NET are all programs offered by epicodus</h1>
+        <p>Do you know the difference between the languages in the offfered programs?</p>
+        <p>Take a quiz to test for a quick estimation for which track is best for you.</p>
+      <select class="form-control" id=questionOne>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+      <form id="uselessQuestions">
+        <div class="form-group">
+          <label for "writtenQuestion1">ANswer here</label>
+          <input type="text" id="writtenQuestion1" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for "writtenQuestion2">ANswer here</label>
+          <input type="text" id="writtenQuestion2" class="form-control">
+        </div>
 
-    </div>
+      </form>
 
+      </div>
+      <div class="radio">
+        <label>asdf<input type="radio" name="radioOptions" value="ttest1" checked></input>
+        </label>
+        <label>asd<input type="radio" name="radioOptions" value="ttest2"></input>
+        </label>
+        <label>as<input type="radio" name="radioOptions" value="ttest3"></input>
+        </label>
+      </div>
+
+  </div>
   </body>
 </html>
