add lots of line deletions in index.html to restart and rebuild layout.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="jquerry-3.3.1.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Language Track Suggester</title>
   </head>
   <body>
@@ -13,31 +13,15 @@
         <p>Do you know the difference between the languages in the offfered programs?</p>
         <p>Take a quiz to test for a quick estimation for which track is best for you.</p>
       <select class="form-control" id=questionOne>
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-      <form id="uselessQuestions">
+        <option value=test1>1</option>
+        <option value=test2>2</option>
+        <option value=test3>3</option>
+    
         <div class="form-group">
-          <label for "writtenQuestion1">ANswer here</label>
+          <label for="writtenQuestion1">answer here</label>
           <input type="text" id="writtenQuestion1" class="form-control">
         </div>
-        <div class="form-group">
-          <label for "writtenQuestion2">ANswer here</label>
-          <input type="text" id="writtenQuestion2" class="form-control">
-        </div>
 
-      </form>
-
-      </div>
-      <div class="radio">
-        <label>asdf<input type="radio" name="radioOptions" value="ttest1" checked></input>
-        </label>
-        <label>asd<input type="radio" name="radioOptions" value="ttest2"></input>
-        </label>
-        <label>as<input type="radio" name="radioOptions" value="ttest3"></input>
-        </label>
-      </div>
-
-  </div>
+    </div>
   </body>
 </html>
