add format quiz questions in html. Page layout issues resolved

--- a/index.html
+++ b/index.html
@@ -12,16 +12,48 @@
       <h1> Ruby/Rails, CSS/React C#/.NET are all programs offered by epicodus</h1>
         <p>Do you know the difference between the languages in the offfered programs?</p>
         <p>Take a quiz to test for a quick estimation for which track is best for you.</p>
+      <div class="pictureChoice">
+      <h3>Without thinking about it. Follow your gut and pick the picture you think looks the coolest.</h3>
+      </div>
+      <br>
+      <br>
+      <br>
       <select class="form-control" id=questionOne>
-        <option value=test1>1</option>
+        <option value=test0>What do you think</option>
         <option value=test2>2</option>
         <option value=test3>3</option>
-    
-        <div class="form-group">
-          <label for="writtenQuestion1">answer here</label>
-          <input type="text" id="writtenQuestion1" class="form-control">
-        </div>
-
+        <option value=test2>2</option>
+        <option value=test2>2</option>
+        <option value=test2>2</option>
+        <option value=test2>2</option>
+      </select>
+      <br>
+      <br>
+      <br>
+      <form id="written-form">
+        <h3>question here</h3>
+        <label for="written-inputOne">answer here</label>
+        <input type="text" id="written-input1">
+        <button type="submit" class="questionButton">Submit</button>
+      </form>
+      <br>
+      <br>
+      <br>
+      <div class="radio">
+        <h3>It is your first day of higschool. </h3>
+        <label>
+          <input type="radio" name="friendChoice" value="1">
+          friend
+        </label>
+        <label>
+          <input type="radio" name="friendChoice" value="2">
+          friend
+        </label>
+        <label>
+          <input type="radio" name="friendChoice" value="3">
+          friend
+        </label>
+      </div>
     </div>
   </body>
 </html>
