add a picture resumbling each program. Clicking a picture is part of the language quiz

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <p>Do you know the difference between the languages in the offfered programs?</p>
         <p>Take a quiz to test for a quick estimation for which track is best for you.</p>
       <div class="pictureChoice">
-      <h3>Without thinking about it. Follow your gut and pick the picture you think looks the coolest.</h3>
+        <h3>Without thinking about it. Follow your gut and pick the picture you think looks the coolest.</h3>
+          <img id="pictureAnswersC" src="img/cSharp.png" alt="a picture to resumble C# here">
+          <img id="pictureAnswersRUBY" src="img/ruby.png" alt="a picture to resumble Ruby here">
+          <img id="pictureAnswersREACT" src="img/react.png" alt="a picture to resumble react here">
+
       </div>
       <br>
       <br>
