add background color. variables for chosen picture. A button for each quiz question.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Do you know the difference between the languages in the offfered programs?</p>
         <p>Take a quiz to test for a quick estimation for which track is best for you.</p>
       <div class="pictureChoice">
-        <h3>Without thinking about it. Follow your gut and pick the picture you think looks the coolest.</h3>
+        <h3>Don't about it. Jist follow your gut and pick the picture you think looks the coolest.</h3>
           <img id="pictureAnswersC" src="img/cSharp.png" alt="a picture to resumble C# here">
           <img id="pictureAnswersRUBY" src="img/ruby.png" alt="a picture to resumble Ruby here">
           <img id="pictureAnswersREACT" src="img/react.png" alt="a picture to resumble react here">
@@ -35,10 +35,10 @@
       <br>
       <br>
       <form id="written-form">
-        <h3>question here</h3>
-        <label for="written-inputOne">answer here</label>
+        <h3>On a scale from 1-30, important is it that you pick the language with the highest salary?</h3>
+        <label for="written-input"></label>
         <input type="text" id="written-input1">
-        <button type="submit" class="questionButton">Submit</button>
+        <button type="submit" class="questionButton2">Submit</button>
       </form>
       <br>
       <br>
@@ -57,6 +57,7 @@
           <input type="radio" name="friendChoice" value="3">
           friend
         </label>
+        <button type="submit" id="questionButton3">Submit your new friendship here</button>
       </div>
     </div>
   </body>
