--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <option value=test2>2</option>
         <option value=test2>2</option>
       </select>
+      <button type="submit" class="questionButton1">Submit</button>
       <br>
       <br>
       <br>
