add 6 options for dropdown question, two options for each program.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <br>
       <select class="form-control" id=questionOne>
         <option value=test0>What do you think</option>
-        <option value=test2>2</option>
-        <option value=test3>3</option>
-        <option value=test2>2</option>
-        <option value=test2>2</option>
-        <option value=test2>2</option>
-        <option value=test2>2</option>
+        <option value=2>Making a  brand new website    react</option>
+        <option value=test3>Changing a websites interacting applications  // rails </option>
+        <option value=test2>Enjoy using amazon, twitter, treehouse webpages  // rails </option>
+        <option value=test2>Reading about something that is well documented //c#  </option>
+        <option value=test2>Constructing a blueprint for building a house   //c# </option>
+        <option value=test2>Changing a websites color and layout   react </option>
       </select>
       <button type="submit" class="questionButton1">Submit</button>
       <br>
@@ -45,18 +45,18 @@
       <br>
       <br>
       <div class="radio">
-        <h3>It is your first day of higschool. </h3>
+        <h3>Pretend that it is your first day freshmen year of higschool. You just moved to a small town. Everyone around town went out of their way to explain how friendships in the highschool typically work. The friendships in the highschool are limited to basically only one main friend at a time for the first few years. One your first day you found out that friends are picked in the first day. You narrowed your options down to three people: Matt, an athletic guy who will undoublfully be popular for the next few years. Lisa, who you saw drawing a picture of the classroom with the addition of christmas decorations around the room. She showed you a few random websites that had cats on them. Nathan,  </h3>
         <label>
           <input type="radio" name="friendChoice" value="1">
-          friend
+          Matt
         </label>
         <label>
           <input type="radio" name="friendChoice" value="2">
-          friend
+          Lisa
         </label>
         <label>
           <input type="radio" name="friendChoice" value="3">
-          friend
+          Nathan
         </label>
         <button type="submit" id="questionButton3">Submit your new friendship here</button>
       </div>
