a fix to an error that would result in the case of a tie between two tracks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <br>
       <br>
       <select class="form-control" id=questionOne>
-        <option value="0">What sounds the most fun to you?</option>
+        <option value="1">What sounds the most fun to you?</option>
         <option value="49">Making a  brand new website    react</option>
         <option value="27">Changing a websites interacting applications  // rails </option>
         <option value="9">Enjoy using amazon, twitter, treehouse webpages  // rails </option>
@@ -59,7 +59,7 @@
 
 
       <select class="form-control" id=questionTwo>
-        <option value="0">What sounds the most fun to you?</option>
+        <option value="1">What sounds the most fun to you?</option>
         <option value="49">Making a  brand new website    react</option>
         <option value="27">Changing a websites interacting applications  // rails </option>
         <option value="9">Enjoy using amazon, twitter, treehouse webpages  // rails </option>
@@ -93,7 +93,7 @@
       </div>
       <div class="noAnswer">
         <h3 id="header-for-result">You did not answer enough questions for the quiz to give any meaningful results</h3>
-        <p> You should look into retaking the quiz</p>
+        <p> You should look into retaking the quiz. Don't forget to press 'submit' after each question</p>
         <button type="button" class="restartWebpage">Click here to restart the quiz</button>
       </div>
     </div>
